use openRewrite migrate to JDK-21