@@ -3,8 +3,6 @@
 
 package org.meteor.remote.proto.client;
 
-import java.io.Serial;
-
 /**
  * Protobuf type {@code meteor.protobuf.TopicChangedSignal}
  */
@@ -12,8 +10,7 @@ public final class TopicChangedSignal extends
     com.google.protobuf.GeneratedMessageV3 implements
     // @@protoc_insertion_point(message_implements:meteor.protobuf.TopicChangedSignal)
     TopicChangedSignalOrBuilder {
-  @Serial
-  private static final long serialVersionUID = 0L;
+    private static final long serialVersionUID = 0L;
   // Use TopicChangedSignal.newBuilder() to construct.
   private TopicChangedSignal(com.google.protobuf.GeneratedMessageV3.Builder<?> builder) {
     super(builder);
@@ -139,7 +136,7 @@ public final class TopicChangedSignal extends
     }
     public static final com.google.protobuf.Descriptors.EnumDescriptor
         getDescriptor() {
-      return org.meteor.remote.proto.client.TopicChangedSignal.getDescriptor().getEnumTypes().getFirst();
+        return org.meteor.remote.proto.client.TopicChangedSignal.getDescriptor().getEnumTypes().get(0);
     }
 
     private static final Type[] VALUES = values();
@@ -193,8 +190,8 @@ public final class TopicChangedSignal extends
   @java.lang.Override
   public java.lang.String getTopic() {
     java.lang.Object ref = topic_;
-    if (ref instanceof java.lang.String string) {
-      return string;
+      if (ref instanceof java.lang.String) {
+          return (java.lang.String) ref;
     } else {
       com.google.protobuf.ByteString bs = 
           (com.google.protobuf.ByteString) ref;
@@ -211,10 +208,10 @@ public final class TopicChangedSignal extends
   public com.google.protobuf.ByteString
       getTopicBytes() {
     java.lang.Object ref = topic_;
-    if (ref instanceof java.lang.String string) {
+      if (ref instanceof java.lang.String) {
       com.google.protobuf.ByteString b = 
           com.google.protobuf.ByteString.copyFromUtf8(
-                  string);
+                  (java.lang.String) ref);
       topic_ = b;
       return b;
     } else {
@@ -539,8 +536,8 @@ public final class TopicChangedSignal extends
     }
     @java.lang.Override
     public Builder mergeFrom(com.google.protobuf.Message other) {
-      if (other instanceof org.meteor.remote.proto.client.TopicChangedSignal signal) {
-        return mergeFrom(signal);
+        if (other instanceof org.meteor.remote.proto.client.TopicChangedSignal) {
+            return mergeFrom((org.meteor.remote.proto.client.TopicChangedSignal) other);
       } else {
         super.mergeFrom(other);
         return this;
@@ -702,10 +699,10 @@ public final class TopicChangedSignal extends
     public com.google.protobuf.ByteString
         getTopicBytes() {
       java.lang.Object ref = topic_;
-      if (ref instanceof String string) {
+        if (ref instanceof String) {
         com.google.protobuf.ByteString b = 
             com.google.protobuf.ByteString.copyFromUtf8(
-                    string);
+                    (java.lang.String) ref);
         topic_ = b;
         return b;
       } else {
